# ai-ml-bootstrapper

./: .gitignore  LICENSE  README.md
automatic-speech-recognition/: README.md
gif-creator/: .env.example  README.md  gif_web.py  image_to_gif_creator.py  main.py  multi_prompt_gif_creator.py  pyproject.toml  requirements.txt  single_prompt_multiple_images.gif_creator.py  single_prompt_multiple_images_gif_creator.py  single_prompt_single_image_gif_creator.py  summary.md
gif-creator/scripts/: prerequisites.sh
language-translator/: README.md
market-research-assistant/: .env.example  agent_instructions.txt  app.py  comparison_report.py  product_narsi.md  product_research.py  readme.md  requirements.txt
market-research-assistant/src/: app.py  competitor_research.py  crew_flow.py  product_research.py
multimodal-translator/: .gitignore  README.md  speech_translator.py
multimodal-translator/kubernetes/: README.md  manifest.yaml
multimodal-translator/web/: server.cjs  vite.config.js
pic-chatter/backend/: .env.example  .gitignore  main.py  readme.md  requirements.txt
pic-chatter/frontend/: .env.example  .gitignore  readme.md  server.js
rag-containers/: FAQ.md  README.md  docker-compose.gpu-override.yml  docker-compose.yml  prerequisites.sh  run.sh
rag-containers/scripts/: nvidia-ctk.sh  prerequisites.sh
rag-containers/store_service/: Dockerfile  my_secret.txt  (+4 more)
snap-insight/: .gitignore  LICENSE  README.md  app.py  requirements.txt
text-to-speech/: README.md  client.py
your-daily-dose-of-ai/: .env.example  .gitignore  main.py  readme.md  requirements.txt
(+17 files in other folders)
