[project]
name = "gif-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers",
    "gradio>=5.44.1",
    "moviepy==2.2.1",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.56.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
